--- a/BruteForceEngine/BruteForceEngine.vcxproj.filters
+++ b/BruteForceEngine/BruteForceEngine.vcxproj.filters
@@ -57,9 +57,6 @@
     <ClCompile Include="RenderInstanced.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="IndexedGeometryPlane.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
     <ClCompile Include="RenderTerrain.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
@@ -153,6 +150,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="RenderTargetTexture.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="PipelineState.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
