--- a/BruteForceEngine/BruteForceEngine.vcxproj.filters
+++ b/BruteForceEngine/BruteForceEngine.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="BruteForceMath.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="SkyAstronomy.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VideoDriverDX12.h">
@@ -204,6 +207,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="BruteForceMath.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="SkyAstronomy.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
