--- a/BruteForceEngine/BruteForceEngine.vcxproj.filters
+++ b/BruteForceEngine/BruteForceEngine.vcxproj.filters
@@ -233,6 +233,9 @@
     <ClInclude Include="RWRawBuffer.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="CommonRenderParams.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="BasicVertexShader.hlsl">
