--- a/BruteForceEngine/BruteForceEngine.vcxproj.filters
+++ b/BruteForceEngine/BruteForceEngine.vcxproj.filters
@@ -274,5 +274,8 @@
     <None Include="math.hlsli">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="color.hlsli">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
