--- a/BruteForceEngine/BruteForceEngine.vcxproj.filters
+++ b/BruteForceEngine/BruteForceEngine.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="ScreenSpaceLuminance.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="ComputeLuminance.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VideoDriverDX12.h">
@@ -245,6 +248,9 @@
     <ClInclude Include="ScreenSpaceLuminance.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="ComputeLuminance.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="BasicVertexShader.hlsl">
@@ -281,6 +287,9 @@
       <Filter>Shaders</Filter>
     </FxCompile>
     <FxCompile Include="Luminance1Pass.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="ComputeLuminance.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
   </ItemGroup>
