--- a/BruteForceEngine/BruteForceEngine.vcxproj
+++ b/BruteForceEngine/BruteForceEngine.vcxproj
@@ -42,8 +42,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -200,6 +200,7 @@
     <ClInclude Include="BruteForceMath.h" />
     <ClInclude Include="CommonRenderParams.h" />
     <ClInclude Include="ComputeLuminance.h" />
+    <ClInclude Include="ComputeLuminanceCB.h" />
     <ClInclude Include="ComputeSubsystem.h" />
     <ClInclude Include="ComputeTerrainShadow.h" />
     <ClInclude Include="Camera.h" />
