--- a/BruteForceEngine/BruteForceEngine.vcxproj.filters
+++ b/BruteForceEngine/BruteForceEngine.vcxproj.filters
@@ -316,5 +316,8 @@
     <None Include="color.hlsli">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="LightScattering.hlsli">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
